harbor/templates/trivy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy
  namespace: harbor
  labels:
    app: trivy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trivy
  template:
    metadata:
      labels:
        app: trivy
    spec:
      containers:
        - name: trivy
          image: goharbor/trivy-adapter-photon:v2.10.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /var/lib/trivy
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trivy-pvc
