harbor/templates/harbor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor
  namespace: harbor
  labels:
    app: harbor
    component: portal
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  selector:
    app: harbor
    component: portal
