harbor/templates/jobservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-jobservice
  namespace: harbor
  labels:
    app: harbor
    component: jobservice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: jobservice
